gameboard alignment issue fix

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1111,7 +1111,7 @@ nav ul
       flex(1)
       display-flex()
       flex-direction(column)
-      margin-left: 32px
+      margin-left: 6px
 
       > div
         flex(1)
@@ -1196,7 +1196,8 @@ nav ul
                 bottom: 85px
                 top: auto
 
-        .server.opponent
+      .corp-board.opponent
+        .server
           transform(rotate(0))
 
           .content
